[package]
name = "pngdefry"
version = "0.0.2"
edition = "2021"
authors = ["lake <amwoqmgo@mail.com>"]
description = "ios pngdefry"
repository = "https://github.com/dounine/rust-pngdefry"
license = "MIT"
build = "build.rs"

exclude = ["iphone.png", "niphone.png"]

[workspace]
members = ["example"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
libc = "0.2.152"

[build-dependencies]
bindgen = "0.69.4"
cc = { version = "1.0.83", features = ["parallel"] }

[lib]
name = "pngdefry"
path = "src/lib.rs"
